--- a/JC vue project/my-project/package.json
+++ b/JC vue project/my-project/package.json
@@ -9,6 +9,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-airbnb": "^3.0.0-beta.7",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
