--- a/JC vue project/my-project/package.json
+++ b/JC vue project/my-project/package.json
@@ -12,6 +12,7 @@
     "@vue/eslint-config-airbnb": "^3.0.0-beta.7",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
+    "bootstrap-vue": "^2.0.0-rc.9",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
