--- a/JC vue project/my-project/package.json
+++ b/JC vue project/my-project/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.0",
     "bootstrap-vue": "^2.0.0-rc.9",
+    "v-money": "^0.8.1",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
