--- a/JC vue project/my-project/package.json
+++ b/JC vue project/my-project/package.json
@@ -16,6 +16,7 @@
     "v-money": "^0.8.1",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vue-search-select": "^2.6.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
